* (bug 34302) Add CSS classes to email fields in user preferences
* Introduced $wgDebugDBTransactions to trace transaction status (currently PostgreSQL only)
* (bug 23795) Add parser itself to ParserMakeImageParams hook.
* Introduce a cryptographic random number generator source api for use when
  generating various tokens.
* (bug 35378) Support multiple collations at the same time.

=== Bug fixes in 1.20 ===
* (bug 30245) Use the correct way to construct a log page title.
* (bug 34237) Regenerate an empty user_token and save to the database
  when we try to set the user's cookies for login.
* (bug 32210) New edit emails for watched pages always provide a link to the
  edit which triggered the mail.
* (bug 12021) Added user talk link on Special:Listusers
* (bug 34445) section edit and TOC hide/show links are excluded from selection and
  copy/paste on supporting browsers
* (bug 34428) Fixed incorrect hash mismatch errors in the DiffHistoryBlob 
  history compression method.
* (bug 34702) Localised parentheses are now used in more special pages.
* (bug 34723) When editing a script page on a RTL wiki the textbox should be LTR.
* (bug 34762) Calling close() on a DatabaseBase object now clears the connection.
* (bug 34863) Show deletion log extract on non-existent file pages if applicable.
* (bug 28019) Let ?preloadtitle=foo be passed on to target of
  Special:MyPage and Special:MyTalk
* (bug 34929) Show the correct diff when a section edit is rejected by the spam 
  filter
* (bug 15816) Add a switch for SETting the search_path (Postgres)
* (bug 34521) Returning to the previous page after logging in loses any array-
  valued parameters in the query string
* (bug 34735) Updated compressOld.php documentation to mention the different
  usages of -s and -n parameters depending on compression type
* (bug 13896) Rendering of devanagari numbers in automatic '#' number lists

=== API changes in 1.20 ===