@@ -51,17 +51,22 @@ class ApiQueryCategoryInfo extends ApiQueryBase {
 			$cattitles[$c] = $t->getDBkey();
 		}
 
-		$this->addTables( array( 'category', 'page', 'page_props' ) );
+		$this->addTables( array( 'category', 'page',
+			'pp_hidden' => 'page_props', 'pp_collation' => 'page_props' ) );
 		$this->addJoinConds( array(
 			'page' => array( 'LEFT JOIN', array(
 				'page_namespace' => NS_CATEGORY,
 				'page_title=cat_title' ) ),
-			'page_props' => array( 'LEFT JOIN', array(
-				'pp_page=page_id',
-				'pp_propname' => 'hiddencat' ) ),
+			'pp_hidden' => array( 'LEFT JOIN', array(
+				'pp_hidden.pp_page=page_id',
+				'pp_hidden.pp_propname' => 'hiddencat' ) ),
+			'pp_collation' => array( 'LEFT JOIN', array(
+				'pp_collation.pp_page=page_id',
+				'pp_collation.pp_propname' => 'defaultcollation' ) ),
 		) );
 
-		$this->addFields( array( 'cat_title', 'cat_pages', 'cat_subcats', 'cat_files', 'pp_propname AS cat_hidden' ) );
+		$this->addFields( array( 'cat_title', 'cat_pages', 'cat_subcats', 'cat_files',
+			'pp_hidden.pp_propname AS cat_hidden', 'pp_collation.pp_value AS cat_collation' ) );
 		$this->addWhere( array( 'cat_title' => $cattitles ) );
 
 		if ( !is_null( $params['continue'] ) ) {
@@ -81,6 +86,9 @@ class ApiQueryCategoryInfo extends ApiQueryBase {
 			$vals['subcats'] = intval( $row->cat_subcats );
 			if ( $row->cat_hidden ) {
 				$vals['hidden'] = '';
+			}
+			if ( isset( $row->cat_collation ) ) {
+				$vals['collation'] = $row->cat_collation;
 			}
 			$fit = $this->addPageSubItems( $catids[$row->cat_title], $vals );
 			if ( !$fit ) {
